--- a/canonical-file-structure/what-to-install.yaml
+++ b/canonical-file-structure/what-to-install.yaml
@@ -5,3 +5,8 @@ install:
     - 7 zip
     - Voidtools everything
     - WinSCP
+    - MobaXTerm
+    - Go
+    - Notepad++
+    - SQLiteBrowser
+    - Java
